
 zenTrack is a top quality, simple, and elegant
 tracking system for small to medium-large companies.
 Clean, simple interface, fully adaptable administration,
 object oriented and database abstracted design lend to 
 endless possibilities for project expansion.

----- V2.4 (development, see CVS) ----

2003-04-02, Kato
  Enhanced Debugging Output
    - zentrack/includes/footer.php 1.18
    - zentrack/includes/zen.class 1.18
    - zentrack/includes/translator.class 1.5
  Added German translation
    - zentrack/includes/translations/german.trans 1.1
  Postgres Testing/Compatability
    - zentrack/includes/db.class 1.22
    - zentrack/includes/zenTrack.class 1.86
    - zentrack/www/admin/bins.php 1.4
    - zentrack/www/admin/editUserSubmit.php 1.8
    - zentrack/www/admin/priorities.php 1.4
    - zentrack/www/admin/systems.php 1.4
    - zentrack/www/admin/tasks.php 1.5
    - zentrack/www/admin/types.php 1.5

2003-03-28, Kato
  Updated SQL files for new version
    - zentrack/install/UPGRADE_SEED_mysql.sql 1.9
    - zentrack/install/UPGRADE_SEED_oracle.sql 1.8
    - zentrack/install/UPGRADE_SEED_postgres.sql 1.8
    - zentrack/install/UPGRADE_SEED_mssqlserver.sql 1.1
    - zentrack/install/UPGRADE_mssqlserver.sql 1.1
    - zentrack/install/UPGRADE_mysql.sql 1.7
    - zentrack/install/UPGRADE_oracle.sql 1.8
    - zentrack/install/UPGRADE_postgres.sql 1.9
    - zentrack/install/build_mssqlserver.sql 1.3
    - zentrack/install/build_mysql.sql 1.7
    - zentrack/install/build_oracle.sql 1.8
    - zentrack/install/build_postgres.sql 1.11
    - zentrack/install/seed_mssqlserver.sql 1.6
    - zentrack/install/seed_mysql.sql 1.16
    - zentrack/install/seed_oracle.sql 1.13
    - zentrack/install/seed_postgres.sql 1.12
    - zentrack/install/previous/2.3.UPGRADE_SEED_mysql.sql 1.1
    - zentrack/install/previous/2.3.UPGRADE_SEED_oracle.sql 1.1
    - zentrack/install/previous/2.3.UPGRADE_SEED_postgres.sql 1.1
    - zentrack/install/previous/2.3.UPGRADE_mysql.sql 1.1